--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,198 +1,24 @@
-<header class="header">
-   <div>
-    <ul class="dvs1">
-        <li><a href="#">개인</a></li>
-        <li>|</li>
-        <li><a href="#">기업</a></li>
-    </ul>
-    <ul class="dvs2">
-        <li><a href="#">로그인</a></li>
-        <li>|</li>
-        <li><a href="#">주문확인</a></li>
-        <li>|</li>
-        <li><a href="#">간편조회</a></li>
-        <li>|</li>
-        <li><a href="#">아이디/비밀번호찾기</a></li>
-        <li>|</li>
-        <li><a href="#">회원가입</a></li>
-    </ul>
-    </div>
-</header>
-<section class="nav">
-    <ul class="dvs3">
-        <li><a href="#">상품서비스</a></li>
-        <li><a href="#">다이렉트샵</a></li>
-        <li><a href="#">멤버십</a></li>
-        <li><a href="#">로밍</a></li>
-        <li><a href="#">혜택/이벤트</a></li>
-        <li><a href="#">고객센터</a></li>
-        <li><a href="#">my T</a></li>
-    </ul>
-</section>
-<section class="banner">
-    <div class="btn">
-        <li class="unc">데이터 S.O.S</li>
-        <li class="unc">T안심보안</li>
-        <li class="unc">T map 택시</li>
-        <li class="unc">0x수능 페스티벌</li>
-        <li class="new_btn">||</li>
-    </div>
-</section>
-<section class="content1">
-   <div class="login">
-       <section class="T">
-          <span class="login_text">
-               <p>로그인 후</p>
-               <p><strong>사용중인 상품/잔여량</strong>을</p>
-               <p>바로 확인하세요!</p>
-           </span>
-           <span class="btn">
-               
-           </span>
-       </section>
-       <section class="M">
-           <ul>
-               <li class="left">회원가입</li>
-               <li>간편조회</li>
-           </ul>
-       </section>
-       <section class="B">
-           <div class="text1">
-               <ul>
-                   <li><a href="#">문자 보내기</a></li>
-                   <li><a href="#">휴대폰 공사지원금</a></li>
-                   <li><a href="#">공유/충전/리필</a></li>
-               </ul>
-               <ul class="ulR">
-                   <li><a href="#">사용금액 조회</a></li>
-                   <li><a href="#">휴대폰분실/정지해제</a></li>
-                   <li><a href="#">멤버십 제휴사혜택</a></li>
-               </ul>
-           </div>
-           <div class="text2">
-               <ul>
-                   <li>나의 메뉴 설정</li>
-               </ul>
-           </div>
-        
-       </section>
-   </div>
-   <div class="f5">
-       <span class="text">
-<!--           <p>과감히 없애고, 더 좋게!</p>-->
-<!--           <p><strong>'새로고침'캠페인</strong></p>-->
-       </span>
-       <span class="btn">
-           <p>자세히 보기</p>
-       </span>
-   </div>
-   <div class="taxi">
-        <span class="text">
-<!--           <p>스마트폰 하나로 안심 귀가 OK</p>-->
-<!--           <p><strong>T map 택시</strong></p>-->
-       </span>
-       <span class="btn">
-           <p>자세히 보기</p>
-       </span>
-   </div> 
-</section>
-<section id="tip">
-    <section class="info">
-        <p>놓치기엔 아까운 SKT만의 꿀팁</p>
-    </section>
-    <section class="Fcards">
-        <div class="card">
-            <ul>
-                <li class="ref">
-                    <p><strong class="quot">"</strong></p>
-                    <p><strong class="title">새로고침</strong></p>
-                    <div>
-                        <p>하나부터 열까지</p>
-                        <p>무엇이 바뀌었을까요?</p>
-                    </div>
-                </li>
-                <li class="cst">
-                    <p><strong class="quot">"</strong></p>
-                    <p><strong class="title">장기가입고객</strong></p>
-                    <div>
-                        <p>을 위한 추가적인 혜택은</p>
-                        <p>없나요?</p>
-                    </div>
-                </li>
-                <li class="pur">
-                    <p><strong class="quot">"</strong></p>
-                    <p><strong class="title">휴대폰 구매</strong></p>
-                    <div>
-                        <p>할 때, 받을 수 있는 지원금은</p>
-                        <p>얼마나 되나요?</p>
-                    </div>
-                </li>
-                <li class="lost">
-                    <p><strong class="quot">"</strong></p>
-                    <p><strong class="title">휴대폰 분실</strong></p>
-                    <div>
-                        <p>했는데, 찾을 수 있는 방법은</p>
-                        <p>없나요?</p>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </section>
-    <section class="more">
-        <div class="txt">
-            <ul>
-                <li class="pay">
-                    <p class="title">요금제를 새로고침&nbsp;<strong>></strong></p>
-                    <p>요금제는 나한테 딱 맞게,</p>
-                    <p>데이터는 가족이 다 함께&nbsp;<span>T플랜</span></p>
-                </li>
-                <li class="phone">
-                    <p class="title">휴대폰을 새로고침&nbsp;<strong>></strong></p>
-                    <p>휴대폰을 보다 합리적이고 편리하게</p>
-                    <p><span>T렌탈&amp;T올케어</span></p>
-                </li>
-                <li class="all">
-                    <p class="title">모두 다 새로고침&nbsp;<strong>></strong></p>
-                    <p>불편한 건 없개, 좋은 건 더 좋게</p>
-                    <p><span>약정제도, T로밍, T멤버십</span></p>
-                </li>
-            </ul>
-        </div>
-        <div class="rfbtn">
-            <p>새로고침 더보기&nbsp;<strong>></strong></p>
-        </div>
-    </section>
-</section>
-<section id="rp">
-    <div>
-        <p>SKT에서 준비한 특별한 <span>추천상품</span></p>
-    </div>
-</section>
-<section id="support">
-    <div class="sup">
-        <ul class="supp">
-            <li class="F">
-                <p><strong>자주 찾는 질문&nbsp;></strong></p>
-                <p>고객센터에서 궁금하신 점을 찾아보세요.</p>
-            </li>
-            <li 
-               class="S">
-                <p><strong>지점 및 대리점 찾기&nbsp;></strong></p>
-                <p>가까운 지점 및 대리점을 찾아보세요.</p>
-            </li>
-            <li class="TT">
-                <p><strong>이럴 땐 이렇게 하세요&nbsp;></strong></p>
-                <p>다양한 상황 별 대처법을 쉽게 안내해드립니다.</p>
-            </li>
-        </ul>
-    </div>
-    <div class="notice">
-        <div>
-            <ul>
-               <li class="not">[공지사항]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;개인정보이용내역통지 시스템 점검으로 인한 서비스 제한 안내</li>
-               <li class="mor">더보기&nbsp;&nbsp;&nbsp;></li>
-           </ul>
-        </div>
-    </div>
-</section>
+
 <router-outlet></router-outlet>
+
+
+<div>
+    <a [routerLink]="['/tworld']">rachel</a>
+</div>
+
+
+
+
+
+<div>
+    <a [routerLink]="['/sally']">sally</a>
+</div>
+  
+  
+  
+  
+
+<div>
+    <a [routerLink]="['/chocoa']">chocoa</a>
+</div>
+  
