--- a/src/app/sally/sally.component.html
+++ b/src/app/sally/sally.component.html
@@ -1,10 +1,14 @@
-<div>
-    <a [routerLink]="['/sally']">sally</a>
-</div>
-  
 
-  
-  
+<section class="box_container">
+
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+</section>
+
 <header class="header">
    <div>
     <ul class="dvs1">
@@ -20,6 +24,7 @@
         <li><a href="#">간편조회</a></li>
         <li>|</li>
         <li><a href="#">아이디/비밀번호찾기</a></li>
+        <li>|</li>
         <li>|</li>
         <li><a href="#">회원가입</a></li>
     </ul>
@@ -202,3 +207,4 @@
         </div>
     </div>
 </section>
+<router-outlet></router-outlet>
