--- a/src/app/sally/sally.component.scss
+++ b/src/app/sally/sally.component.scss
@@ -10,6 +10,11 @@
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+li{
+    list-style: none;
+}
+
 .header {
     width: 100%;
     height: 30px;
@@ -17,36 +22,70 @@
     display: flex;
     align-items: center;
 }
-.header div{
-    width: 1180px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
+.header {
+    div {
+        display: flex;
+        align-items: center;
+        width: 1180px;
+        min-width: 1180px;
+        margin: 0 auto;
+        &:after {
+            clear: both;
+            content: "";
+            display: block;
+            
+        }
+        ul {
+            width: 1180px;
+        }
+    }
 }
-.header ul{   
-    width: 1180px;
-    
-}
-.header div:after{
-    clear: both;
-    content: "";
-    display: block;
-}
+
+//div {
+//    display: block;
+//    display: flex;
+//    float: left;
+//    position: absolute;
+//    left: 0;
+//    bottom: 0;
+//    width: auto;
+//    min-width: 0;
+//    max-width: 0;
+//    height: auto;
+//    min-height: 0;
+//    max-height: 0;
+//    margin: ;
+//    padding: 0 20px;
+//    border: 1px solid red;
+//    outline: 1px solid red;
+//    background: yellow;
+//    font-size: ;
+//    font-family: ;
+//    font-weight: 700;
+//    line-height: ;
+//    text-align: 
+//    color: green;
+//    opacity: 0.5;
+//}
+
+
+//.header div:after{
+//    clear: both;
+//    content: "";
+//    display: block;
+//}
 ul{
 //    display: flex;
     
 }
 .header .dvs1{
-//    float:left;
+    float:left;
 }
 .header .dvs1 li{
     float: left;
     margin: 0 5px;  
 }
 
-li{
-    list-style: none;
-}
 .header li {
     color: #727272;
     font-size: 12px;
@@ -54,7 +93,6 @@ li{
 
 .header .dvs2{
     float: right;
-    
 }
 
 .header .dvs2 li{
@@ -494,3 +532,16 @@ li .TT{
     justify-content: flex-end;
     width: 1030px;   
 }
+
+.box_container {
+    display: flex;
+    .box {
+        width: 200px;
+        height: 100px;
+        background: pink;
+        margin: 10px;
+
+    }
+    
+}
+
