--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,3 +29,8 @@
     <a [routerLink]="['/flex']">flex</a>
 </div>
   
+
+
+<div>
+    <a [routerLink]="['/movie_template']">movie_template</a>
+</div>
